Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131923

QPainter::drawImage with CompositionMode_Source into non-alpha image format produces transparent pixels

XMLWordPrintable

    • All
    • 68d001150 (dev), 1e605b6e0 (6.10), d3c5bfbf6 (tqtc/lts-6.8), 0899651c8 (dev), d2c8fcb75 (6.10), 2b4959e69 (tqtc/lts-6.5)

      QPainter paints transparent pixels white on macOS with composition mode CompositionMode_Source and image format QImage::Format_RGBX64 (as shown in macos.png). On Windows the pixels are painted black (windows.png).

      The attached example can be used to reproduce the issue.

        1. iconcol_linux.png
          iconcol_linux.png
          15 kB
        2. iconcol.zip
          1.0 kB
        3. image-2025-10-09-13-20-36-486.png
          image-2025-10-09-13-20-36-486.png
          313 kB
        4. image-2025-10-09-13-21-53-506.png
          image-2025-10-09-13-21-53-506.png
          345 kB
        5. image-2025-10-09-13-24-46-086.png
          image-2025-10-09-13-24-46-086.png
          251 kB
        6. macos.png
          macos.png
          278 kB
        7. sourceComposition.zip
          43 kB
        8. windows.png
          windows.png
          33 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            tiheikka Titta Heikkala
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: