Only skip writeback conversion for RGBx64 on opaque sources

Anything transparent needs to be unpremultiplied and masked.

Fixes: QTBUG-131923
Pick-to: 6.8 6.5
Change-Id: Ib60f3f257c86aaa8f894393b57dd49d69f73dc87
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 68d001150080e0b1fdb11243fa0e22ff633fe21b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>